# aezakmi_test

./: .env.template  .flake8  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_25_1522-39558cb1ea4a_add_model.py  2025_03_25_1755-50e7333374a0_change_model.py  2025_03_25_1756-f717b68e8f6e_chage_model_read_at.py
app/: celery_worker.py  main.py
app/ai_api/: __init__.py  api.py
app/api/: __init__.py
app/api/v1/endpoints/: notifications.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  base.py  notification.py
app/repositories/: __init__.py  notification_repository.py
app/schemas/: __init__.py  notification.py
app/services/: __init__.py  notification_service.py
tests/: conftest.py  test_ai_integration.py  test_get_notifications.py  test_notification.py  test_update_notification.py
